--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" type="text/css" href="css/stylein.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<script src="https://kit.fontawesome.com/a81368914c.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/stylein.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@300&display=swap" rel="stylesheet">
@@ -19,36 +19,25 @@
     <div class="container">
 
         <div class="img">
-            <img src="static/img/carritofinal.png">
+            <img src="img/png-transparent-ship-boat-marine-navy-frigate-canon-war-military-removebg-preview.png">
         </div>
         <div class="login-container">
-            <form action="{% url 'ingresar' %}" method = "POST">
-                {% csrf_token %}
-                <img class="avatar" src="static/img/avatar.svg">
+            <form action="" method = "POST">
+                <img class="avatar" src="img/kisspng-computer-icons-avatar-business-computer-software-user-avatar-5b3097fcae25c3.3909949015299112927133-removebg-preview.png">
                 <h2>Bienvenido</h2>
                 <div class="input-div uno">
                     <div class="i">
                         <i class="fas fa-user"> </i>
                     </div>
                     <div>
-                        <h5>Nombre de usuario</h5>
+                        <h5>JUGADOR</h5>
                         <input class="input" type="text" name = "usuario">
                     </div>
                 </div>
-                <div class="input-div dos">
-                    <div class="i">
-                        <i class="fas fa-lock"> </i>
-                    </div>
-                    <div>
-                        <h5>Password</h5>
-                        <input class="input" type="password" name ="password">
-                    </div>
-                </div>
-                <a href="#">Olvido su contraseña?</a>
-                <input type="submit" class="btn" value="Login">
+                    <input type="submit" class="btn" value="INICIAR PARTIDA">
             </form>
         </div>
     </div>
-    <script type="text/javascript" src="/static/main.js"></script>
+    <script type="text/javascript" src="css/main.js"></script>
 </body>
 </html>
