--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <img src="img/png-transparent-ship-boat-marine-navy-frigate-canon-war-military-removebg-preview.png">
         </div>
         <div class="login-container">
-            <form action="" method = "POST">
+            <form action="principal.html" method = "POST">
                 <img class="avatar" src="img/kisspng-computer-icons-avatar-business-computer-software-user-avatar-5b3097fcae25c3.3909949015299112927133-removebg-preview.png">
                 <h2>Bienvenido</h2>
                 <div class="input-div uno">
@@ -34,7 +34,7 @@
                         <input class="input" type="text" name = "usuario">
                     </div>
                 </div>
-                    <input type="submit" class="btn" value="INICIAR PARTIDA">
+                    <input type="submit" class="btn" value="INICIAR PARTIDA" href="principal.html">
             </form>
         </div>
     </div>
