--- a/principal.html
+++ b/principal.html
@@ -3,16 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="css/stylein.css">
+    <link rel="stylesheet" type="text/css" href="css/stylepri.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div class="card col-sm-1">
+    <div class="card col-sm-2">
         <div class="img">
-            <img  src="img/barco-removebg-preview.png">
+            <img  src="img/barco-removebg-preview.png" >
         </div>
+        <table class="table">
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td><a href="#">tamaño=</a></td>
+                <td>50 Metros</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td><a href="#">Peso=</a></td>
+                <td>1 Tonelada</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td><a href="#">Velocidad=</a></td>
+                <td>10 nudos</td>
+              </tr>
+            </tbody>
+          </table>
+
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
