--- a/principal.html
+++ b/principal.html
@@ -9,31 +9,20 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="card col-sm-2">
-        <div class="img">
-            <img  src="img/barco-removebg-preview.png" >
+    <div class="card" style="width: 10rem;">
+        <img src="img/barco-removebg-preview.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h3 class="letra">Barco de guerra</h3>
+          <a href="#">Tamaño=</a>
+          <h2 class="letra2">50 metros</h2>
+          <a href="#">Peso=</a>
+          <h2 class="letra2">1 Tonelada</h2>
+          <a href="#">Tipo=</a>
+          <h2 class="letra2">Guerra</h2>
+          <a href="#">Velocidad Max=</a>
+          <h2 class="letra2">50 nudoss</h2>
         </div>
-        <table class="table">
-            <tbody>
-              <tr>
-                <th scope="row">1</th>
-                <td><a href="#">tamaño=</a></td>
-                <td>50 Metros</td>
-              </tr>
-              <tr>
-                <th scope="row">2</th>
-                <td><a href="#">Peso=</a></td>
-                <td>1 Tonelada</td>
-              </tr>
-              <tr>
-                <th scope="row">3</th>
-                <td><a href="#">Velocidad=</a></td>
-                <td>10 nudos</td>
-              </tr>
-            </tbody>
-          </table>
-
-    </div>
+      </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.min.js" integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u" crossorigin="anonymous"></script>
