--- a/principal.html
+++ b/principal.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-9">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-uWxY/CJNBR+1zjPWmfnSnVxwRheevXITnMqoEIeG1LJrdI0GlVs/9cVSyPYXdcSF" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="css/stylepri.css">
@@ -12,24 +12,24 @@
 </head>
 
 <body>
-  <div class="card" style="width: 10rem; height: 25rem;">
-    <div class="input-div">
-      <img src="img/circulo2-removebg-preview.png" class="img2">
-    </div>
-    <di class="div2">
-      <h2 class="letra2">A1</h2>
-    </di>
-    <img src="img/barco-removebg-preview.png" class="card-img-top">
-    <div class="card-body">
-      <h3 class="letra">Barco de guerra</h3>
-      <a href="#">Tamaño=</a>
-      <h2 class="letra2">50 metros</h2>
-      <a href="#">Peso=</a>
-      <h2 class="letra2">1 Tonelada</h2>
-      <a href="#">Tipo=</a>
-      <h2 class="letra2">Guerra</h2>
-      <a href="#">Velocidad Max=</a>
-      <h2 class="letra2">50 nudoss</h2>
+  <div class="parte01">
+    <div class="card" style="width: 10rem; height: 22rem;">
+      <div class="input-div">
+        <img src="img/circulo2-removebg-preview.png" class="img2">
+      </div>
+      <di class="div2">
+        <h2 class="letra2">A2</h2>
+      </di>
+      <img src="img/barco2-removebg-preview.png" class="card-img-top">
+      <div class="card-body">
+        <h3 class="letra">Barco de guerra</h3>
+        <a href="#">Tamaño=</a>
+        <h2 class="letra2">8 metros</h2>
+        <a href="#">Peso=</a>
+        <h2 class="letra2"> 4 Tonelada</h2>
+        <a href="#">Velocidad Max=</a>
+        <h2 class="letra2">20 nudos</h2>
+      </div>
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
@@ -42,4 +42,5 @@
     integrity="sha384-PsUw7Xwds7x08Ew3exXhqzbhuEYmA2xnwc8BuD6SEr+UmEHlX8/MCltYEodzWA4u"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
