--- a/principal.html
+++ b/principal.html
@@ -20,16 +20,7 @@
       <di class="div2">
         <h2 class="letra2">A2</h2>
       </di>
-      <img src="img/barco2-removebg-preview.png" class="card-img-top">
-      <div class="card-body">
-        <h3 class="letra">Barco de guerra</h3>
-        <a href="#">Tamaño=</a>
-        <h2 class="letra2">8 metros</h2>
-        <a href="#">Peso=</a>
-        <h2 class="letra2"> 4 Tonelada</h2>
-        <a href="#">Velocidad Max=</a>
-        <h2 class="letra2">20 nudos</h2>
-      </div>
+      <img src="img/Barco1.PNG" class="card-img-top">
     </div>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js"
