--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <i class="fas fa-user"> </i>
                     </div>
                     <div>
-                        <h5>JUGADOR</h5>
+                        <h5>Nombre del Jugador</h5>
                         <input class="input" type="text" name = "usuario">
                     </div>
                 </div>
