--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
                         <i class="fas fa-user"> </i>
                     </div>
                     <div>
-                        <h5>Nombre del Jugador</h5>
+                        <h5>Usuario</h5>
                         <input class="input" type="text" name = "usuario">
+                    </div>
+                    <div>
+                        <h5>Contraseña</h5>
+                        <input class="input" type="password" name = "password">
                     </div>
                 </div>
                     <input type="submit" class="btn" value="INICIAR PARTIDA" href="principal.html">
