--- a/principal.html
+++ b/principal.html
@@ -1,50 +1,77 @@
- <!DOCTYPE html>
- <html lang="es">
- 
- <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Juego siigo</title>
-     <link rel="stylesheet" type="text/css" href="css/stylepri.css">
- </head>
- 
- <body>
-     <div class="tablero">
-         <button class="empezar">Empezar juego</button>
-         <div class="superior">
-             <div class="mazo">
-                 <div class="espacio-carta">
-                     <div id="pila-inicial"></div>
-                     <div class="carta-mazo">
-                         <img class="carta1" src="img/Barco1.PNG">
-                     </div>
-                 </div>
-             </div>
-             <div class="carta-mazo2">
-                 <div class="espacio-carta" id="casa-0"></div>
-             </div>
-         </div>
-         <div class="carta-mazo3">
-             <div class="espacio-carta" id="pila-0"></div>
-         </div>
-         <div class="carta-mazo4">
-             <div class="espacio-carta" id="pila-0"></div>
-         </div>
-     </div>
-     <div class="avatar2">
-         <img class="pequeña" src="img/Avatar1.png">
-     </div>
-     <div class="avatar1">
-         <img class="pequeña" src="img/Avatar2.png">
-     </div>
-     <div class="avatar3">
-         <img class="pequeña" src="img/Avatar3.png">
-     </div>
-     <div class="avatar4">
-         <img class="pequeña" src="img/Avatar4.png">
-     </div>
-     <script src="index.js"></script>
- </body>
- 
- </html>
+<!DOCTYPE html>
+<html lang="es">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Juego siigo</title>
+    <link rel="stylesheet" type="text/css" href="css/stylepri.css">
+</head>
+
+<body>
+    <div class="tablero">
+        <button class="empezar">Empezar juego</button>
+        <div class="superior">
+            <div class="mazo">
+                <div class="espacio-carta">
+                    <div id="pila-inicial"></div>
+                    <div class="carta-mazo">
+                        <img class="carta1" src="img/Barco1.PNG">
+                    </div>
+                </div>
+            </div>
+            <div class="mazo">
+                <div id="pila-inicial">
+                    <div class="carta-mazo2">
+                        <div class="espacio-carta" id="casa-0">
+                            <div class="carta-mazo">
+                                <img class="carta1" src="img/reverso.png">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mazo">
+        <div id="pila-inicial">
+            <div class="carta-mazo3">
+                <div class="espacio-carta" id="casa-0">
+                    <div class="carta-mazo">
+                        <img class="carta1" src="img/reverso.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mazo">
+        <div id="pila-inicial">
+            <div class="carta-mazo4">
+                <div class="espacio-carta" id="casa-0">
+                    <div class="carta-mazo">
+                        <img class="carta1" src="img/reverso.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    </div>
+    <div>
+    <div class="avatar2">
+        <img class="pequeña" src="img/Avatar1.png">
+    </div>
+    <div class="avatar1">
+        <img class="pequeña" src="img/Avatar2.png">
+    </div>
+    <div class="avatar3">
+        <img class="pequeña" src="img/Avatar3.png">
+    </div>
+    <div class="avatar4">
+        <img class="pequeña" src="img/Avatar4.png">
+    </div>
+    </div>
+    <script src="index.js"></script>
+</body>
+
+</html>
